# DZ_14_and_more

./: .gitignore  15.1_main.py  16.1_main.py  17.1_main.py  README.md  pyproject.toml
htmlcov/: index.html
src/: OOP_and_classes.py  category.py  inicaonalisason.py  lawngrass.py  main.py  product.py  smartphone.py
tests/: conftest.py  test_category.py  test_print_mixin.py  test_product.py
